--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">News Feed</string>
     <string name="no_news">No News.</string>
-    <string name="no_internet_connection">No internet connection.</string>
+    <string name="no_internet_connection">No internet connection.\nTap to Refresh.</string>
 </resources>
